apps/overlays/zion/docker-registry-ui/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-traefik-outpost
  namespace: registry
spec:
  type: ExternalName
  externalName: auth-traefik-outpost.authentik.svc.cluster.local
  ports:
    - port: 9000
      targetPort: 9000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry-ui
  namespace: registry
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry-ui.milanchis.com`) && PathPrefix(`/`)
      kind: Rule
      priority: 10
      services:
        - name: zion-registry-ui
          port: 80
          sticky:
            cookie:
              name: registry-ui-stickiness
              secure: true
              httpOnly: true
              sameSite: none
      middlewares:
        - name: zion-registry-ui-auth-middleware
        # - name: zion-radarr-cors-middleware
    - match: Host(`registry-ui.milanchis.com`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 15
      services:
        - name: zion-auth-traefik-outpost
          port: 9000

  tls:
    secretName: registry-ui-certificate-secret
